appId: ${APP_ID}
tags:
  - mobile
  - android
  - signin
  - negative
  - regression
---
- launchApp:
    clearState: true
- runScript: ../../scripts/test-data.js
- assertVisible: "Email Address"
- tapOn: "Email Address"
- inputText: ${output.validEmail}
- assertVisible: "Password"
- tapOn: "Password"
- inputText: ${output.incorrectPassword}
- hideKeyboard
- tapOn: "Sign In"
- extendedWaitUntil:
    visible: ".*auth/wrong-password.*"
    timeout: 20000
- stopApp: ${APP_ID}
