appId: ${APP_ID}
tags:
  - mobile
  - android
  - forgot-password
  - positive
  - regression
---
- launchApp:
    clearState: true
- runScript: ../../scripts/test-data.js
- tapOn: "Forgot Email/Password"
- assertVisible: "Submit"
- tapOn: "Email Address"
- inputText: ${output.validEmail}
- hideKeyboard
- tapOn: "Submit"
- extendedWaitUntil:
    visible: ".*The reset password email has been sent.*"
    timeout: 45000
- assertVisible: ".*The reset password email has been sent to the address you entered.*"
- tapOn: "Ok"
- assertVisible: "Sign In"
- stopApp: ${APP_ID}
