appId: ${APP_ID}
tags:
  - mobile
  - android
  - sign-up
  - negative
  - regression
---
- launchApp:
    clearState: true
- runScript: ../../scripts/test-data.js
- tapOn: "Sign Up"
- assertVisible: "Sign Up"
- scrollUntilVisible:
    element: "Privacy Policy"
    direction: DOWN
- tapOn: "Sign Up"
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible: ".*First and last names are required.*"
- assertVisible: ".*An email address is required.*"
- assertVisible: ".*Password is required.*"
- assertVisible: ".*Confirm Passwords is required.*"
- assertVisible: ".*A phone number is required.*"
- assertVisible: ".*An Address is required.*"
- assertVisible: ".*A City is required.*"
- assertVisible: ".*A State is required.*"
- assertVisible: ".*A Zip is required.*"
- scrollUntilVisible:
    element: "Business Name"
    direction: UP
- assertVisible: ".*Business Name is required.*"
- stopApp: ${APP_ID}
