appId: ${APP_ID}
tags:
  - mobile
  - android
  - sign-up
  - negative
  - regression
---
- launchApp:
    clearState: true
- runScript: ../../scripts/test-data.js
- tapOn: "Sign Up"
- assertVisible: "Sign Up"
- tapOn: "Business Name"
- inputText: ${output.businessName}
- hideKeyboard
- tapOn: "First & Last Name"
- inputText: ${output.fullName}
- hideKeyboard
- tapOn: "Email"
- inputText: ${output.validEmail}
- hideKeyboard
- tapOn: "Password"
- inputText: ${output.newAccountPassword}
- hideKeyboard
- tapOn: "Confirm Password"
- inputText: ${output.mismatchedConfirmPassword}
- hideKeyboard
- tapOn: "Mobile Phone"
- inputText: ${output.phone}
- hideKeyboard
- tapOn: "Address 01"
- inputText: ${output.address}
- hideKeyboard
- tapOn: "City"
- inputText: ${output.city}
- hideKeyboard
- tapOn: "State"
- inputText: ${output.state}
- hideKeyboard
- tapOn: "Zip"
- inputText: ${output.zip}
- hideKeyboard
- scrollUntilVisible:
    element: "Privacy Policy"
    direction: DOWN
- tapOn: ".*I accept the.*"
- scrollUntilVisible:
    element: "Sign Up"
    direction: DOWN
- tapOn: "Sign Up"
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible: ".*Passwords do not match.*"
- stopApp: ${APP_ID}
